--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -40,7 +40,7 @@ jobs:
           STATICRYPT_PASSWORD=${{ secrets.STATICRYPT_PASSWORD }}
           EOF
 
-      - name: Run update (decrypt → scrape → encrypt)
+      - name: Run update (decrypt, scrape, encrypt)
         run: npm run update
 
       - name: Commit and push changes
