feat: add data-only encryption script and update package.json
- Introduced a new script `encrypt:data` for encrypting data/stats.json.
- Updated the `update` script to use the new `encrypt:data` instead of the previous `encrypt`.
- The new script utilizes PBKDF2 for password hashing and AES-CBC for encryption, ensuring secure handling of sensitive data.

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: write
+  actions: write
 
 jobs:
   update:
@@ -44,13 +45,22 @@ jobs:
         run: npm run update
 
       - name: Commit and push changes
+        id: commit
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
           if git diff --staged --quiet; then
             echo "No changes to commit"
+            echo "pushed=false" >> $GITHUB_OUTPUT
           else
             git commit -m "Update dashboard data $(date -u '+%Y-%m-%d %H:%M UTC')"
             git push
+            echo "pushed=true" >> $GITHUB_OUTPUT
           fi
+
+      - name: Trigger Pages deployment
+        if: steps.commit.outputs.pushed == 'true'
+        run: gh workflow run static.yml
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
